{{$NEXT}}

    - Adjust duplicate copyrights

0.43      2018-07-13 14:26:35-06:00 America/Denver
    - Skip results that are missing inetnum and inet6num
    - fix duplicate country from apnic_read_query
    - fix unit tests 'whois.registro.br' stop providing country
    - accessors are defined at compile time and AUTOLOAD is not used
anymore
    - Skip data for 0.0.0.0 that is returned from APNIC
    - Net::Whois::IANA should not import dependency symbols
    - Refactor whois_connect and source_connect to avoid memory crash loop
    - Add IPv6 Support to Net::Whois::IANA
    - Ripe queries should include all whois data
    - Fix spaces in descr field

0.41  Fri Mar 29 12:11:19 PDT 2013
	- Fixed bug causing infinite loops when connecting to servers
          (thanks to 
        - Fixed example usage of ->cidr() method
          (thanks to Jabra for noticing)
        - Cleaned up example usage
        - Padded some more error prone code

0.40  Wed Mar 16 13:43:28 IST 2011
	- Switch to Module::Build and Build.PL
	- Major code cleanup
	- Optimization of queries
	- Introduction of autoloading

0.30  Thu May 27 12:13:14 IDT 2010
	- Bug fixing and patch incorporation after a long stagnation
	- Update of whois parser according to changes accumulated

0.23  Sun Nov 18 17:25:04 IST 2007
	- fixed an error in lacnic parsing
	- updated README and inline documentation
	- updated email and copyright notice with the .pm

0.22  Sat Nov 17 15:37:44 IST 2007
	- fixed lacnic test and added a brnic test - Brasil addresses
	  now use their own NIC server
	- added some parsing for lacnic responses
	- added heuristics to guess abuse report address
	- incorporated some supplied patches
	- introduced CREDITS file
	- changed copyright notice as I distribute this module under my
	  own company's name (the license remains the same)

0.21  Wed Aug 24 11:32:50 IDT 2005
	- fixed prerequisites

0.2   Mon Aug 22 11:33:51 IDT 2005
	- changed the data structure of the service to allow usage