@@ -1,7 +1,10 @@
 use strict;
 use warnings;
 
-use Test::More tests => 6;
+use Test2::Bundle::Extended;
+use Test2::Tools::Explain;
+use Test2::Plugin::NoWarnings;
+
 use Net::Whois::IANA;
 
 my $iana = Net::Whois::IANA->new;
@@ -18,6 +21,11 @@ is($iana->country(), 'MX');
 
 # whois.registro.br do not provide anymore the country information for brazilian websites
 $ip = '200.189.169.141';
-$iana->whois_query(-ip=>$ip,-whois=>'lacnic', -debug => 0);
+$iana->whois_query(-ip=>$ip,-whois=>'lacnic' );
 ok(defined $iana);
-is($iana->country(), undef, "whois.registro.br do not provide anymore the country information for brazilian websites");
+todo 'whois.registro.br do not always provide the country' => sub {
+	ok $iana->country(), 'BR';
+};
+
+done_testing;
+
